@@ -12,6 +12,7 @@ TRUNK
 * data frames are now accepted at the back-end
 * FIML ordinal objective function is now working. Ugly and slow, but working.
 * implemented free parameter and fixed parameter substitution in mxAlgebra statements
+* implemented global variable substitution in mxAlgebra statements
 * turned off matrix and algebra substitution until a new proposal is decided
 
 Release 0.1.3-776
